# auto_install

./: .gitignore  Cargo.toml  LICENSE  README.md  all_progs.txt  list.cfg  list.ini
src/: installed_check.rs  installed_scan.rs  list.cfg  main.rs  program.rs
