[package]
name = "auto_install"
version = "0.1.0"
authors = ["Sergey Djumageldiev <lutlut999@outlook.com>", "Ilya Leontyev <ilyaleon1234567890@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.*"
relative-path = "1.*"
